fix dashboard spacing of cards to allow for the floating button

--- a/app/assets/stylesheets/components/itemlist.scss
+++ b/app/assets/stylesheets/components/itemlist.scss
@@ -147,7 +147,7 @@
   .btn-floating {
     background: $sm-green;
     position: absolute;
-    bottom: -2rem;
+    bottom: -1.5rem;
     right: 1rem;
   }
 
